fix hexagons overlapping

--- a/_sass/_layout.sass
+++ b/_sass/_layout.sass
@@ -130,6 +130,8 @@
     display: flex
     flex-direction: column
     justify-content: center
+    z-index: 99
+    position: relative
     @media screen and (orientation: landscape) and (min-width: $medium-screen)
       display: block
     .case-studies-wrapper
